<resources>
    <string name="app_name">ACSapp</string>
    <string name="title_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_actividades">Actividades</string>
    <string name="titulo_estrategias">Estrategias</string>
    <string name="estrategias_intro">"Si estas en crisis, marca la opcion \n con la que te sientas mas comodo  "</string>
    <string name="titulo_emergencia">Centros de Emergencia</string>
    <string name="titulo_contactos">Contactos</string>
    <string name="titulo_tecnicas">Tecnicas de Relajacion</string>
    <string name="titulo_mensaes_motivacionales">Mensajes Motivacionales</string>
    <string name="titulo_historias_inspiradoras">Historias Inspiradoras</string>
    <string name="titulo_otros_recursos">Otros Recursos</string>
    <string name="actividades_intro">"El deporte, las artes y la actividad social \n contribuyen a tu bienestar fisico y mental"</string>
    <string name="app_intro">"Esta app es solo una herramienta para \nactivar en caso de tener ideas suicidas.\nNo reemplaza la atencion directa de\nun profesional en salud mental"</string>
    <string name="titulo_maps">Map</string>
    <string name="text_name">Nombre</string>
    <string name="text_telefono">Telefono</string>
    <string name="text_direccion">Direccion</string>
    <string name="titulo_fragment_actividades">Actividades Saludables</string>
    <string name="title_activity_add_edit_contacto">AddEditContactoActivity</string>
    <string name="title_activity_contacto_detail">ContactoDetailActivity</string>
    <string name="title_activity_tecincas">TecincasActivity</string>
    <string name="title_activity_emergencia_details">EmergenciaDetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_otros_recursos">OtrosRecursosActivity</string>
    <string name="title_activity_historias">HistoriasActivity</string>
</resources>
