<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.acsapp.estrategias.EstrategiasFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_tecnicas_relajacion"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/titulo_tecnicas"
            app:layout_constraintBottom_toTopOf="@+id/btn_otros_recursos"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/btn_otros_recursos"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="Otros Recursos"
            app:layout_constraintBottom_toTopOf="@+id/btn_centros_emergencia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/btn_centros_emergencia"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_marginBottom="52dp"
            android:gravity="center"
            android:text="@string/titulo_emergencia"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_inicio_estrategias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/estrategias_intro"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_tecnicas_relajacion"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/image_inicio"
            android:layout_width="173dp"
            android:layout_height="153dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/text_inicio_estrategias"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.648"
            app:srcCompat="@mipmap/logo_launcher_foreground" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
